Log In, Create Account, and Admin Landing Page

--- a/app/src/main/res/layout/activity_admin_landing_page.xml
+++ b/app/src/main/res/layout/activity_admin_landing_page.xml
@@ -6,4 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".AdminLandingPage">
 
+    <Button
+        android:id="@+id/ViewUsersBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View Users"
+        tools:layout_editor_absoluteX="143dp"
+        tools:layout_editor_absoluteY="210dp" />
+
+    <Button
+        android:id="@+id/ViewWorkoutsBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View Workouts "
+        tools:layout_editor_absoluteX="122dp"
+        tools:layout_editor_absoluteY="317dp" />
+
+    <Button
+        android:id="@+id/adminLogoutBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Log Out"
+        tools:layout_editor_absoluteX="160dp"
+        tools:layout_editor_absoluteY="419dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
