--- a/app/src/main/res/layout/activity_admin_landing_page.xml
+++ b/app/src/main/res/layout/activity_admin_landing_page.xml
@@ -4,29 +4,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient_bg"
     tools:context=".AdminLandingPage">
 
     <Button
         android:id="@+id/ViewUsersBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="126dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="176dp"
+        android:background="@drawable/blue_button"
         android:text="View Users"
-        tools:layout_editor_absoluteX="143dp"
-        tools:layout_editor_absoluteY="210dp" />
+        android:textColor="#1b4b5f"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/ViewWorkoutsBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="126dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="64dp"
+        android:background="@drawable/blue_button"
         android:text="View Workouts "
-        tools:layout_editor_absoluteX="122dp"
-        tools:layout_editor_absoluteY="317dp" />
+        android:textColor="#1b4b5f"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ViewUsersBtn" />
 
     <Button
         android:id="@+id/adminLogoutBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="104dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="68dp"
+        android:background="@drawable/blue_button"
         android:text="Log Out"
-        tools:layout_editor_absoluteX="160dp"
-        tools:layout_editor_absoluteY="419dp" />
+        android:textColor="#1b4b5f"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ViewWorkoutsBtn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
