--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -15,7 +15,7 @@
         tools:layout_editor_absoluteY="16dp">
 
         <EditText
-            android:id="@+id/createAccUsernameET"
+            android:id="@+id/logInUsernameET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="240dp"
@@ -39,7 +39,7 @@
             android:inputType="textPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/createAccUsernameET" />
+            app:layout_constraintTop_toBottomOf="@+id/logInUsernameET" />
 
         <Button
             android:id="@+id/createAccountBtm"
