--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -9,7 +9,7 @@
 
 
     <EditText
-        android:id="@+id/createAccUsernameET"
+        android:id="@+id/logInUsernameET"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="240dp"
@@ -35,7 +35,7 @@
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/createAccUsernameET" />
+        app:layout_constraintTop_toBottomOf="@+id/logInUsernameET" />
 
     <Button
         android:id="@+id/createAccountBtn"
